<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Password Generator</string>
    <string name="menu_settings">Параметры</string>
    <string name="menu_clear_stored_data_all">Удалить всё</string>
    <string name="menu_clear_stored_data_sites">Удалить сайты</string>
    <string name="menu_clear_stored_data_logins">Удалить логины</string>
    
    <string name="master_password">Мастер пароль</string>
    <string name="site">Сайт</string>
    <string name="login">Логин</string>
    <string name="version">Версия</string>
    <string name="password">Пароль</string>
    <string name="password_length">Длина пароля</string>
    <string name="symbols_set_title">Набор символов</string>
    <string name="user_symbol_set">Пользовательский</string>
    
    <string name="save_main_password_query">Вы действительно хотите сохранить Мастер-пароль? Это небезопасно!</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    
    <string name="generate">Сгенерировать</string>
    
    <string name="password_set_param_title">Набор символов</string>
	<string-array name="password_set_names">
	    <item >Пользовательский</item>
	    <item >Полный (aB7#)</item>
	    <item >Сокращённый (aB7)</item>
	    <item >Простой (a7)</item>
	</string-array>
    
	<string-array name="password_set_values">
	    <item >0</item>
	    <item >1</item>
	    <item >2</item>
	    <item >3</item>
   	</string-array>
    
</resources>