<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<ScrollView
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/llBottom" >

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity"
        tools:ignore="TextFields" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/master_password" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/teMasterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/llMasterCommands"
                android:ems="10"
                android:hint="@string/master_password"
                android:inputType="textPassword" />

            <LinearLayout
                android:id="@+id/llMasterCommands"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical" >
                
                <ToggleButton
                    android:id="@+id/tbRememberMainPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ToggleButton" />

                <ImageButton
                    android:id="@+id/ib_view_master_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_search" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/site" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/teSite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/tbSiteIsRemembered"
                android:ems="10"
                android:hint="@string/site" >

                <requestFocus />
            </EditText>

            <ToggleButton
                android:id="@+id/tbSiteIsRemembered"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/ib_sites"
                android:text="" />

            <ImageButton
                android:id="@+id/ib_sites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription=""
                android:src="@android:drawable/ic_menu_more" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/teLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/tbLoginIsRemembered"
                android:ems="10"
                android:hint="@string/login" />

            <ToggleButton
                android:id="@+id/tbLoginIsRemembered"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/ib_logins"
                android:text="" />

            <ImageButton
                android:id="@+id/ib_logins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription=""
                android:src="@android:drawable/ic_menu_more" />

            </RelativeLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <SeekBar
                android:id="@+id/sbVersion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="20" />

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_length" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <SeekBar
                android:id="@+id/sbPasswordLength"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="20" />

            <TextView
                android:id="@+id/tvPasswordLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symbols_set_title" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvSymbolSetName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>

<LinearLayout
    android:id="@+id/llBottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/tePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/button_height"
        android:text="@string/generate" />

</LinearLayout>

</RelativeLayout>